force-app/main/default/objects/MDR_Data_2021__c/MDR_Data_2021__c.object-meta.xml
<CustomObject>
    <label>MDR Data 2021</label>
    <nameField>
        <label>MDR Data 2021</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDR Data 2021</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>