force-app/main/default/objects/MDR_Data_2021__c/fields/ASIANPACF__c.field-meta.xml
<CustomField>
    <fullName>ASIANPACF__c</fullName>
    <label>ASIANPACF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>