force-app/main/default/objects/MDR_Data_2021__c/fields/BILINGFND__c.field-meta.xml
<CustomField>
    <fullName>BILINGFND__c</fullName>
    <label>BILINGFND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>