force-app/main/default/objects/MDR_Data_2021__c/fields/BLACK__c.field-meta.xml
<CustomField>
    <fullName>BLACK__c</fullName>
    <label>BLACK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>