force-app/main/default/objects/MDR_Data_2021__c/fields/CLASSRMTCH__c.field-meta.xml
<CustomField>
    <fullName>CLASSRMTCH__c</fullName>
    <label>CLASSRMTCH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>