force-app/main/default/objects/MDR_Data_2021__c/fields/CMO_ParentPID__c.field-meta.xml
<CustomField>
    <fullName>CMO_ParentPID__c</fullName>
    <label>CMO_ParentPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>