force-app/main/default/objects/MDR_Data_2021__c/fields/CMO_PID__c.field-meta.xml
<CustomField>
    <fullName>CMO_PID__c</fullName>
    <label>CMO_PID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>