force-app/main/default/objects/MDR_Data_2021__c/fields/CNTY_NAME__c.field-meta.xml
<CustomField>
    <fullName>CNTY_NAME__c</fullName>
    <label>CNTY_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>