force-app/main/default/objects/MDR_Data_2021__c/fields/DISTSIZE__c.field-meta.xml
<CustomField>
    <fullName>DISTSIZE__c</fullName>
    <label>DISTSIZE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>