force-app/main/default/objects/MDR_Data_2021__c/fields/ENROLLCODE__c.field-meta.xml
<CustomField>
    <fullName>ENROLLCODE__c</fullName>
    <label>ENROLLCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>