force-app/main/default/objects/MDR_Data_2021__c/fields/ENROLLMENT__c.field-meta.xml
<CustomField>
    <fullName>ENROLLMENT__c</fullName>
    <label>ENROLLMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>