force-app/main/default/objects/MDR_Data_2021__c/fields/ESL_PRG__c.field-meta.xml
<CustomField>
    <fullName>ESL_PRG__c</fullName>
    <label>ESL_PRG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>