force-app/main/default/objects/MDR_Data_2021__c/fields/FILETYPE__c.field-meta.xml
<CustomField>
    <fullName>FILETYPE__c</fullName>
    <label>FILETYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>