force-app/main/default/objects/MDR_Data_2021__c/fields/GRADE10__c.field-meta.xml
<CustomField>
    <fullName>GRADE10__c</fullName>
    <label>GRADE10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>