force-app/main/default/objects/MDR_Data_2021__c/fields/GRADE11__c.field-meta.xml
<CustomField>
    <fullName>GRADE11__c</fullName>
    <label>GRADE11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>