force-app/main/default/objects/MDR_Data_2021__c/fields/GRADE12__c.field-meta.xml
<CustomField>
    <fullName>GRADE12__c</fullName>
    <label>GRADE12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>