force-app/main/default/objects/MDR_Data_2021__c/fields/HISPANIC__c.field-meta.xml
<CustomField>
    <fullName>HISPANIC__c</fullName>
    <label>HISPANIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>