force-app/main/default/objects/MDR_Data_2021__c/fields/INDALASK__c.field-meta.xml
<CustomField>
    <fullName>INDALASK__c</fullName>
    <label>INDALASK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>