force-app/main/default/objects/MDR_Data_2021__c/fields/INST__c.field-meta.xml
<CustomField>
    <fullName>INST__c</fullName>
    <label>INST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>