force-app/main/default/objects/MDR_Data_2021__c/fields/INST_SPEC__c.field-meta.xml
<CustomField>
    <fullName>INST_SPEC__c</fullName>
    <label>INST_SPEC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>