force-app/main/default/objects/MDR_Data_2021__c/fields/INST_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INST_TYPE__c</fullName>
    <label>INST_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>