force-app/main/default/objects/MDR_Data_2021__c/fields/KINDRGRTN__c.field-meta.xml
<CustomField>
    <fullName>KINDRGRTN__c</fullName>
    <label>KINDRGRTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>