force-app/main/default/objects/MDR_Data_2021__c/fields/LEPENR__c.field-meta.xml
<CustomField>
    <fullName>LEPENR__c</fullName>
    <label>LEPENR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>