force-app/main/default/objects/MDR_Data_2021__c/fields/LEPPER__c.field-meta.xml
<CustomField>
    <fullName>LEPPER__c</fullName>
    <label>LEPPER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>