force-app/main/default/objects/MDR_Data_2021__c/fields/LUNCHPRGM__c.field-meta.xml
<CustomField>
    <fullName>LUNCHPRGM__c</fullName>
    <label>LUNCHPRGM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>