force-app/main/default/objects/MDR_Data_2021__c/fields/MCITY__c.field-meta.xml
<CustomField>
    <fullName>MCITY__c</fullName>
    <label>MCITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>