force-app/main/default/objects/MDR_Data_2021__c/fields/MSTATE__c.field-meta.xml
<CustomField>
    <fullName>MSTATE__c</fullName>
    <label>MSTATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>