force-app/main/default/objects/MDR_Data_2021__c/fields/MSTREET__c.field-meta.xml
<CustomField>
    <fullName>MSTREET__c</fullName>
    <label>MSTREET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>