force-app/main/default/objects/MDR_Data_2021__c/fields/MZIPCODE__c.field-meta.xml
<CustomField>
    <fullName>MZIPCODE__c</fullName>
    <label>MZIPCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>