force-app/main/default/objects/MDR_Data_2021__c/fields/MZIPEXT__c.field-meta.xml
<CustomField>
    <fullName>MZIPEXT__c</fullName>
    <label>MZIPEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>