force-app/main/default/objects/MDR_Data_2021__c/fields/NCES_LOCALE__c.field-meta.xml
<CustomField>
    <fullName>NCES_LOCALE__c</fullName>
    <label>NCES_LOCALE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>