force-app/main/default/objects/MDR_Data_2021__c/fields/NCESHID__c.field-meta.xml
<CustomField>
    <fullName>NCESHID__c</fullName>
    <label>NCESHID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>