force-app/main/default/objects/MDR_Data_2021__c/fields/NCESHIGH__c.field-meta.xml
<CustomField>
    <fullName>NCESHIGH__c</fullName>
    <label>NCESHIGH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>