force-app/main/default/objects/MDR_Data_2021__c/fields/NCESLOW__c.field-meta.xml
<CustomField>
    <fullName>NCESLOW__c</fullName>
    <label>NCESLOW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>