force-app/main/default/objects/MDR_Data_2021__c/fields/PARENTPID__c.field-meta.xml
<CustomField>
    <fullName>PARENTPID__c</fullName>
    <label>PARENTPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>