force-app/main/default/objects/MDR_Data_2021__c/fields/SPECEDENR__c.field-meta.xml
<CustomField>
    <fullName>SPECEDENR__c</fullName>
    <label>SPECEDENR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>