force-app/main/default/objects/MDR_Data_2021__c/fields/SPECEDFND__c.field-meta.xml
<CustomField>
    <fullName>SPECEDFND__c</fullName>
    <label>SPECEDFND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>