force-app/main/default/objects/MDR_Data_2021__c/fields/SPECEDPER__c.field-meta.xml
<CustomField>
    <fullName>SPECEDPER__c</fullName>
    <label>SPECEDPER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>