force-app/main/default/objects/MDR_Data_2021__c/fields/STPREKINDR__c.field-meta.xml
<CustomField>
    <fullName>STPREKINDR__c</fullName>
    <label>STPREKINDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>