force-app/main/default/objects/MDR_Data_2021__c/fields/STU_NEED_PER__c.field-meta.xml
<CustomField>
    <fullName>STU_NEED_PER__c</fullName>
    <label>STU_NEED_PER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>