force-app/main/default/objects/MDR_Data_2021__c/fields/STU_TCHR_RATIO__c.field-meta.xml
<CustomField>
    <fullName>STU_TCHR_RATIO__c</fullName>
    <label>STU_TCHR_RATIO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>