force-app/main/default/objects/MDR_Data_2021__c/fields/STUNGRADED__c.field-meta.xml
<CustomField>
    <fullName>STUNGRADED__c</fullName>
    <label>STUNGRADED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>