force-app/main/default/objects/MDR_Data_2021__c/fields/TAG_PRG__c.field-meta.xml
<CustomField>
    <fullName>TAG_PRG__c</fullName>
    <label>TAG_PRG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>