force-app/main/default/objects/MDR_Data_2021__c/fields/Test_Score_Reading_Gr3_2019__c.field-meta.xml
<CustomField>
    <fullName>Test_Score_Reading_Gr3_2019__c</fullName>
    <label>Test_Score_Reading_Gr3_2019</label>
    <length>255</length>
    <type>Text</type>
</CustomField>