force-app/main/default/objects/MDR_Data_2021__c/fields/Test_Year__c.field-meta.xml
<CustomField>
    <fullName>Test_Year__c</fullName>
    <label>Test_Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>