force-app/main/default/objects/MDR_Data_2021__c/fields/TOTSTNDTS__c.field-meta.xml
<CustomField>
    <fullName>TOTSTNDTS__c</fullName>
    <label>TOTSTNDTS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>