force-app/main/default/objects/MDR_Data_2021__c/fields/UNIV__c.field-meta.xml
<CustomField>
    <fullName>UNIV__c</fullName>
    <label>UNIV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>