force-app/main/default/objects/MDR_Data_2021__c/fields/UPID__c.field-meta.xml
<CustomField>
    <fullName>UPID__c</fullName>
    <label>UPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>