force-app/main/default/objects/MDR_Data_2021__c/fields/WHITE__c.field-meta.xml
<CustomField>
    <fullName>WHITE__c</fullName>
    <label>WHITE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>