force-app/main/default/objects/MDR_Data_2021__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FILETYPE__c</columns>
    <columns>PID__c</columns>
    <columns>PARENTPID__c</columns>
    <columns>UPID__c</columns>
    <columns>UNIV__c</columns>
    <columns>INST_TYPE__c</columns>
    <columns>INST_SPEC__c</columns>
    <columns>NCESHID__c</columns>
    <columns>INST__c</columns>
    <columns>MSTREET__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>