force-app/main/default/objects/MDR_Data_2021__c/listViews/RI_Data.listView-meta.xml
<ListView>
    <fullName>RI_Data</fullName>
    <columns>NAME</columns>
    <columns>FILETYPE__c</columns>
    <columns>PID__c</columns>
    <columns>PARENTPID__c</columns>
    <columns>UPID__c</columns>
    <columns>UNIV__c</columns>
    <columns>INST_TYPE__c</columns>
    <columns>INST_SPEC__c</columns>
    <columns>NCESHID__c</columns>
    <columns>INST__c</columns>
    <columns>MSTREET__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MSTATE__c</field>
        <operation>equals</operation>
        <value>RI</value>
    </filters>
    <label>RI Data</label>
</ListView>